# CaseGuardDataPipeline

./: CLAUDE.md  Dockerfile  Proclaim.wsdl  Proclaim_test.wsdl  README.md  STAGING_DEPLOYMENT.md  TESTING_GUIDE.md  pyproject.toml  technical-details.md  test_full_pipeline.py  test_proclaim_integration.py  validate_integration_complete.py
.github/workflows/: deploy-staging.yml
ai/: __init__.py  enricher.py
api/: __init__.py  main.py
caseguard/: __init__.py
caseguard/hdr_timeline/: smart_field_retriever.py
caseguard/proclaim/: client.py  soap_downloader.py
caseguard/storage/: spaces.py
caseguard/utils/: session_manager.py
caseguard/vectorization/: embedder.py
config/: canonical_fields_corrected.json
configs/tenants/: FDM example Funded Cases.csv  fdm_solicitors.json
core/: __init__.py  error_handling.py  session_manager.py  tenant_manager.py
crm/: __init__.py  api_requirements.md  discovery.py
database/: alembic_setup.py  change_tracking.py  models.py
deployment/: .env.example  .env.staging.example  Dockerfile.api  Dockerfile.worker  docker-compose.staging.yml  docker_compose.yml
deployment/nginx/: nginx.staging.conf
deployment/scripts/: setup-droplet.sh  setup-ssh-keys.sh
docproc/: __init__.py  format_config.py
etl/: prefect_config.py  reconciliation.py  worker.py
etl/flows/: onboard_tenant.py  process_case.py  sync_daily.py  sync_daily_enhanced.py
monitoring/: __init__.py  dashboard.py
proclaim/: __init__.py  status_detector.py
tests/: conftest.py
tests/end_to_end/: test_complete_pipeline_nbc200993.py
tests/integration/: test_component_integration_tdd.py
tests/unit/: test_field_extractor_interface.py  test_proclaim_client_interface.py  test_soap_downloader_interface.py  test_spaces_client_interface.py
thoughts/shared/plans/: 2025-09-27-proclaim-integration-plan.md
thoughts/shared/research/: 2025-09-26-etl-pipeline-testing-documentation.md  2025-09-27-proclaim-api-implementation.md
